# open-ams

./: Cargo.toml
example/: ams.json  ams.yaml  auth.json
example/common/: phone_number.yaml
example/feature/: auth.yaml
example/types/: ids.json  phone_number.json
open-ams-cli/: Cargo.toml
open-ams-cli/src/: cli.rs  error.rs  main.rs
open-ams-cli/src/executors/: executable_command.rs  mod.rs  version.rs
open-ams-compiler/: Cargo.toml
open-ams-compiler/spec/: project.schema.json
open-ams-compiler/src/: ams-json.pest  iter_utils.rs  lib.rs
open-ams-compiler/src/compiler/: mod.rs
open-ams-compiler/src/context/: mod.rs  project_context.rs
open-ams-compiler/src/json/: element.rs  error.rs  json_key.rs  mod.rs  parser.rs  render.rs  (+1 more)
open-ams-engine/: Cargo.toml
open-ams-engine/assets/stdlib/: ams.yaml  number.yaml  string.yaml
open-ams-engine/src/: assets.rs  lib.rs
open-ams-engine/src/entity/: component.rs  component_definition.rs  declaration_reference.rs  declaration_reference_filter.rs  dependency.rs  environment.rs  epath.rs  event.rs  event_definition.rs  manifest.rs  mod.rs  module_definitions.rs  parameter_definition.rs  project_identifier.rs  target_language.rs  type_definition.rs
open-ams-engine/src/resolver/: mod.rs  project_query.rs  resolver_impl.rs
open-ams-engine/src/source/entity/: component_definition.rs  environment.rs  event_definition.rs  manifest.rs  mod.rs  module_definitions.rs  module_fragment.rs  project.rs  project_reference.rs  type_definition.rs  version.rs
open-ams-engine/src/util/: custom_serialization.rs  mod.rs
(+7 files in other folders)
