[package]
name = "open-ams-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.11"
walkdir = "2.5.0"
uuid = { version = "1.13.2", features = ["v4"] }

[package.metadata.scripts]
run = "cargo test test_example"
